feat: bump 0.0.1